[package]
name = "loginhuset"
version = "0.1.0"
authors = ["michael <michael@f3k.org>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
chrono = "0.4.19"
getopts = "0.2.15"
simplelog = "0.8.0"
log = "0.4.11"
toml = "0.5.7"
serde = {version="1.0.117", features = ["derive"]}
serde_urlencoded = "0.7.0"
tokio = {version="0.2", features = ["full"]}
futures = "0.3.6"
hyper = "0.13"
hyper-staticfile = "0.5.3"
hyper-tls = "0.4.3"
cookie = "0.14.2"
url = "2.1.1"
anyhow = "1.0"
rand = "0.7.3"
base64 = "0.13.0"
lazy_static = "1.4.0"

[dependencies.diesel]
default-features = false
features = ["sqlite", "chrono"]
version = "1.4.4"

[dependencies.multipart]
path = "libs/multipart"
